--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,20 @@
 [versions]
 agp = "8.13.1"
-kotlin = "2.0.21"
+kotlin = "2.0.20"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
-composeBom = "2024.09.00"
+composeBom = "2025.11.00"
+
+ksp = "2.0.20-1.0.24"
+loggingInterceptor = "4.12.0"
+okhttp = "4.12.0"
+securityCrypto = "1.1.0-alpha06"
+datastorePreferences = "1.1.2"
+
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -25,8 +32,31 @@ androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
 
+
+dagger-hilt = { module = "com.google.dagger:hilt-android", version = "2.57.2" }
+dagger-hilt-testing = { module = "com.google.dagger:hilt-android-testing", version = "2.57.2" }
+hilt-compiler = { module = "com.google.dagger:hilt-android-compiler", version = "2.57.2" }
+hilt-compose-navigation = { module = "androidx.hilt:hilt-navigation-compose", version = "1.3.0" }
+
+#networking
+retrofit = { module = "com.squareup.retrofit2:retrofit", version = "3.0.0" }
+retrofit-gson-convertor = { module = "com.squareup.retrofit2:converter-gson", version = "3.0.0" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
+
+#DataStore
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+
+#Security
+androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+
+dagger = { id = "com.google.dagger.hilt.android", version = "2.57.2" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+
+
 
